@@ -1,6 +1,8 @@
 0.12
     - If asked for a reply before we've learned anything, return nothing
       instead of spewing warnings
+    - Issue #19: Ability to ->train() from filehandle as well as from
+      a file
 
 0.11 Fri Feb 12 09:44:13 GMT 2010
     - Corrected outdated documentation in some places
